--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "symfony/dependency-injection": "^7.0",
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.0",
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "symfony/serializer": "^7.0"
     },
     "config": {
         "allow-plugins": {
