--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,15 +1,11 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    jwt.secret.key: '%env(JWT_SECRET_KEY)%'
 
 services:
 
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
     App\:
         resource: '../src/'
@@ -17,3 +13,14 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    App\Payment\Model\WritePaymentStorage:
+        class: App\Payment\Infrastructure\Doctrine\Repository\PaymentRepository
+    App\Payment\Application\Resolver\ValueResolverProcess:
+
+
+    App\Payment\Application\Listener\ActionListener:
+        arguments:
+            $secretKey: '%jwt.secret.key%'
+        tags:
+            - { name: kernel.event_listener, event: kernel.request}
