--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         }
     ],
     "require": {
+        "ext-bcmath": "*",
+        "ext-pdo": "*",
         "symfony/flex": "^2.4",
         "symfony/framework-bundle": "^7.0",
         "symfony/runtime": "^7.0",
@@ -20,7 +22,7 @@
         "doctrine/orm": "^2.17",
         "doctrine/annotations": "^2.0",
         "doctrine/common": "^3.4",
-        "nelmio/api-doc-bundle": "^4.15",
+        "nelmio/api-doc-bundle": "v4.16.0",
         "symfony/asset": "^7.0",
         "twig/twig": "^3.8",
         "symfony/css-selector": "^7.0",
@@ -43,6 +45,11 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
@@ -54,6 +61,7 @@
         "symfony/web-profiler-bundle": "^7.0",
         "vimeo/psalm": "^5.18",
         "squizlabs/php_codesniffer": "^3.8",
-        "slevomat/coding-standard": "^8.14"
+        "slevomat/coding-standard": "^8.14",
+        "phpunit/phpunit": "^10.5"
     }
 }
