PM-02-kafka-stream

--- a/.env.local.dist
+++ b/.env.local.dist
@@ -2,9 +2,9 @@ APP_ENV=dev
 APP_SECRET=c8459b038531660e1d77466af2df3977
 #APP_DEBUG=1
 
-#KAFKA_BROKER_LIST=lottery_kafka
-#KAFKA_GROUP_ID=consumer_group
-#KAFKA_TOPIC_PREFIX=lottery_
+KAFKA_BROKER_LIST=payment_kafka
+KAFKA_GROUP_ID=consumer_group
+KAFKA_TOPIC_PREFIX=payment_
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
