--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /docker-compose.yaml
+/docker-compose.kafka.yaml
 /env.local
 /vendor/
 /.idea/
@@ -11,7 +12,6 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
-/vendor/
 ###< symfony/framework-bundle ###
 
 ###> squizlabs/php_codesniffer ###
