--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,10 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
+        },
+        "run-phpunit": "vendor/bin/phpunit",
+        "run-psalm": "vendor/bin/psalm --no-cache",
+        "run-phpcf": "vendor/bin/phpcs"
     },
     "require-dev": {
         "symfony/stopwatch": "^7.0",
