--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,28 +4,37 @@ on:
   push:
     branches:
       - "main"
+
 jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Validate composer.json and composer.lock
-          run: composer validate
-        - name: Get composer cache directory
-          id: composer-cache
-          run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-        - name: Cache composer dependencies
-          uses: actions/cache@v3
-          with:
-            path: ${{ steps.composer-cache.outputs.dir }}
-            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-            restore-keys: ${{ runner.os }}-composer-
-        - name: Install Composer dependencies
-          run: composer install
-          working-directory: ./
-        - uses: actions/checkout@v3
-        - name: Run Tests
-          working-directory: ./
-          run: composer run-phpunit
-        - name: Stat Analyze
-          working-directory: ./
-          run: composer run-psalm
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Validate composer.json and composer.lock
+        run: composer validate
+        working-directory: payment
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('payment/**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer dependencies
+        run: composer install
+        working-directory: payment
+
+      - name: Run Tests
+        run: composer run-phpunit
+        working-directory: payment
+
+      - name: Stat Analyze
+        run: composer run-psalm
+        working-directory: payment
