--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('payment/**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
+      - name: Update Composer dependencies
+        run: composer update
+        working-directory: .
+
       - name: Install Composer dependencies
         run: composer install
         working-directory: .
