--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('payment/**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Update Composer dependencies
-        run: composer update
+      - name: Update Composer dependencies with all dependencies
+        run: composer update --with-all-dependencies
         working-directory: .
 
       - name: Install Composer dependencies
