--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,8 @@
         "squizlabs/php_codesniffer": "^3.8",
         "slevomat/coding-standard": "^8.14",
         "phpunit/phpunit": "^10.5"
+    },
+    "conflict": {
+        "symfony/symfony": "*"
     }
 }
