--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "php": ">=8.3",
         "ext-bcmath": "*",
         "ext-pdo": "*",
         "symfony/flex": "^2.4",
