--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,11 @@
 {
     "name": "root/payment",
-    "description": "Payment service",
-    "license": "proprietary",
     "authors": [
         {
             "name": "Alvi IS"
         }
     ],
     "require": {
-        "php": ">=8.3",
         "ext-bcmath": "*",
         "ext-pdo": "*",
         "symfony/flex": "^2.4",
@@ -25,7 +22,7 @@
         "doctrine/orm": "^2.17",
         "doctrine/annotations": "^2.0",
         "doctrine/common": "^3.4",
-        "nelmio/api-doc-bundle": "^4.16.2",
+        "nelmio/api-doc-bundle": "v4.16.0",
         "symfony/asset": "^7.0",
         "twig/twig": "^3.8",
         "symfony/css-selector": "^7.0",
@@ -54,9 +51,6 @@
         }
     },
     "scripts": {
-        "run-phpunit": "vendor/bin/phpunit",
-        "run-psalm": "vendor/bin/psalm --no-cache",
-        "run-phpcf": "vendor/bin/phpcs",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
@@ -69,8 +63,5 @@
         "squizlabs/php_codesniffer": "^3.8",
         "slevomat/coding-standard": "^8.14",
         "phpunit/phpunit": "^10.5"
-    },
-    "conflict": {
-        "symfony/symfony": "*"
     }
 }
