--- a/docker/nginx/payment.conf
+++ b/docker/nginx/payment.conf
@@ -5,17 +5,19 @@ upstream php-upstream {
 server {
         listen 80;
         listen [::]:80;
-        listen 443;
-        listen [::]:443;
+        listen 443 ssl;
+        listen [::]:443 ssl;
 
-        server_name 127.0.0.1;
+        server_name localhost;
 
         charset utf-8;
 
 #        include mime.types;
 
-#        ssl_certificate /etc/nginx/ssl/nginx.crt;
-#        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        ssl_certificate /etc/ssl/certs/localhost.pem;
+        ssl_certificate_key /etc/ssl/private/localhost-key.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
         set $root_path '/var/www/payment/public';
 
