--- a/.env.local.dist
+++ b/.env.local.dist
@@ -6,10 +6,16 @@ KAFKA_BROKER_LIST=payment_kafka
 KAFKA_GROUP_ID=consumer_group
 KAFKA_TOPIC_PREFIX=payment_
 
+#docker exec -it payment-ksqlcli  ksql http://ksqldb-server:8088
+
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=payment
 POSTGRES_PORT=5432
 POSTGRES_HOST=db
+
+MESSENGER_TRANSPORT_DSN=payment_kafka://
+
+JWT_SECRET_KEY=secret
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?serverVersion=15&charset=utf8"
