--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.0",
         "firebase/php-jwt": "^6.10",
-        "symfony/serializer": "^7.0"
+        "symfony/serializer": "^7.0",
+        "symfony/messenger": "^7.0",
+        "kwn/php-rdkafka-stubs": "^2.2"
     },
     "config": {
         "allow-plugins": {
@@ -59,7 +61,7 @@
     "require-dev": {
         "symfony/stopwatch": "^7.0",
         "symfony/web-profiler-bundle": "^7.0",
-        "vimeo/psalm": "^5.18",
+        "vimeo/psalm": "^5.19.0",
         "squizlabs/php_codesniffer": "^3.8",
         "slevomat/coding-standard": "^8.14",
         "phpunit/phpunit": "^10.5"
