--- a/docker/php/conf.d/xdebug.ini
+++ b/docker/php/conf.d/xdebug.ini
@@ -2,7 +2,7 @@ xdebug.mode=develop,debug
 xdebug.cli_color=1
 xdebug.start_with_request = yes
 xdebug.discover_client_host = false
-xdebug.remote_host=172.17.0.1
+xdebug.client_host=172.17.0.1
 xdebug.client_port = 9000
 xdebug.output_dir = "/tmp/docker-xdebug"
 xdebug.log=/tmp/xdebug.log
