--- a/composer.json
+++ b/composer.json
@@ -63,9 +63,11 @@
     "require-dev": {
         "symfony/stopwatch": "^7.0",
         "symfony/web-profiler-bundle": "^7.0",
-        "vimeo/psalm": "^5.19.0",
+        "vimeo/psalm": "^5.20.0",
         "squizlabs/php_codesniffer": "^3.8",
         "slevomat/coding-standard": "^8.14",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "friendsofphp/php-cs-fixer": "v3.48.0",
+        "rector/rector": "^0.19.2"
     }
 }
