--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,9 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+#    asyncreact:
+#        event:
+#            event_bus: []
+
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     handle_all_throwables: true
@@ -10,7 +14,6 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
-
     #esi: true
     #fragments: true
     php_errors:
