PM-03-async-domain-event

--- a/composer.json
+++ b/composer.json
@@ -9,30 +9,30 @@
         "ext-bcmath": "*",
         "ext-pdo": "*",
         "symfony/flex": "^2.4",
-        "symfony/framework-bundle": "^7.0",
-        "symfony/runtime": "^7.0",
-        "symfony/yaml": "^7.0",
-        "symfony/http-kernel": "^7.0",
-        "symfony/http-foundation": "^7.0",
-        "symfony/routing": "^7.0",
-        "symfony/config": "^7.0",
-        "symfony/dotenv": "^7.0",
+        "symfony/framework-bundle": "v7.0.3",
+        "symfony/runtime": "v7.0.3",
+        "symfony/yaml": "v7.0.3",
+        "symfony/http-kernel": "v7.0.3",
+        "symfony/http-foundation": "v7.0.3",
+        "symfony/routing": "v7.0.3",
+        "symfony/config": "v7.0.3",
+        "symfony/dotenv": "v7.0.3",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^2.17",
+        "doctrine/orm": "2.18.0",
         "doctrine/annotations": "^2.0",
         "doctrine/common": "^3.4",
         "nelmio/api-doc-bundle": "v4.16.0",
-        "symfony/asset": "^7.0",
+        "symfony/asset": "v7.0.3",
         "twig/twig": "^3.8",
-        "symfony/css-selector": "^7.0",
-        "symfony/twig-bundle": "^7.0",
-        "symfony/dependency-injection": "^7.0",
+        "symfony/css-selector": "v7.0.3",
+        "symfony/twig-bundle": "v7.0.3",
+        "symfony/dependency-injection": "v7.0.3",
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.0",
         "firebase/php-jwt": "^6.10",
-        "symfony/serializer": "^7.0",
-        "symfony/messenger": "^7.0",
+        "symfony/serializer": "v7.0.3",
+        "symfony/messenger": "v7.0.3",
         "kwn/php-rdkafka-stubs": "^2.2",
         "react/async": "^4.1.0",
         "react/child-process": "^0.6.5"
@@ -61,13 +61,13 @@
         }
     },
     "require-dev": {
-        "symfony/stopwatch": "^7.0",
-        "symfony/web-profiler-bundle": "^7.0",
-        "vimeo/psalm": "^5.20.0",
+        "symfony/stopwatch": "v7.0.3",
+        "symfony/web-profiler-bundle": "v7.0.3",
+        "vimeo/psalm": "^5.21.1",
         "squizlabs/php_codesniffer": "^3.8",
         "slevomat/coding-standard": "^8.14",
-        "phpunit/phpunit": "^10.5",
+        "phpunit/phpunit": "^10.5.10",
         "friendsofphp/php-cs-fixer": "v3.48.0",
-        "rector/rector": "^0.19.2"
+        "rector/rector": "^0.19.6"
     }
 }
