--- a/.env
+++ b/.env
@@ -1,10 +1,21 @@
 APP_ENV=${APP_ENV}
 APP_SECRET=${APP_SECRET}
+#APP_DEBUG=1
 
-###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-MESSENGER_TRANSPORT_DSN=kafka://
-###< symfony/messenger ###
+KAFKA_BROKER_LIST=${KAFKA_BROKER_LIST}
+KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
+KAFKA_TOPIC_PREFIX=${KAFKA_TOPIC_PREFIX}
+
+#docker exec -it payment-ksqlcli  ksql http://ksqldb-server:8088
+
+POSTGRES_USER=${POSTGRES_USER}
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+POSTGRES_DB=${POSTGRES_DB}
+POSTGRES_PORT=${POSTGRES_PORT}
+POSTGRES_HOST=${POSTGRES_HOST}
+
+MESSENGER_TRANSPORT_DSN=${MESSENGER_TRANSPORT_DSN}
+
+JWT_SECRET_KEY=secret
+
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?serverVersion=15&charset=utf8"
